--- a/docker-install.yml
+++ b/docker-install.yml
@@ -18,3 +18,5 @@
       name: docker
       state: started
       enabled: yes  
+  - name: "Launch the docker environment using shell"
+    shell: docker run -it --rm -p 8888:8080 tomcat:9.0
